--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.3
+  chewie: ^1.10.0
+  video_player: ^2.9.2
+  better_player: ^0.0.84
 
 dev_dependencies:
   flutter_test:
